@@ -37,7 +37,7 @@ class MatchedQueryResultTest {
                 .build();
         var result = matchedQueryresult.getCutoffGeometryAsLineStrings();
         assertThat(result).hasSize(2);
-        assertThat(result.get(0)).isEqualTo(lineString_1);
+        assertThat(result.getFirst()).isEqualTo(lineString_1);
         assertThat(result.get(1)).isEqualTo(lineString_2);
     }
 }
